config bug, warining error,scrollbar, header menu

--- a/src/GlobalStyles/GlobalStyles.scss
+++ b/src/GlobalStyles/GlobalStyles.scss
@@ -37,6 +37,7 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
+    overflow-y: overlay;
 }
 button,
 input,
@@ -49,12 +50,30 @@ a[href] {
     color: var(--text-color);
     text-decoration: none;
 }
-::-webkit-scrollbar {
+// custom scrollbar
+html *::-webkit-scrollbar {
+    border-radius: 0;
     width: 8px;
 }
-::-webkit-scrollbar-thumb {
-    background-color: transparent;
-    border-top: 30px solid rgba(22, 24, 35, 0.08);
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(22, 24, 35, 0.06);
+}
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(22, 24, 35, 0.06);
+}
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
+}
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 //Tippy config
