--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -11,7 +11,9 @@
     justify-content: center;
 }
 .inner {
-    height: 100%;
+    position: fixed;
+    z-index: 10;
+    height: 60px;
     width: var(--default-layout-header-width);
     padding: 0 24px;
     display: flex;
