--- a/src/components/Popper/wrapper.module.scss
+++ b/src/components/Popper/wrapper.module.scss
@@ -5,5 +5,5 @@
     padding: 8px 0;
     background-color: rgb(255, 255, 255);
     box-sizing: border-box;
-    max-height: min((100vw - 96px) - 60px);
+    max-height: min((100vh - 96px) - 60px);
 }
